omega commit intense edition